--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+ <h1>To-Do-List</h1>
     <div class="box">
 
         <% for(var i=0;i<tasks.length;i++){ %>
