--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,9 +5,14 @@ html {
     font-family: 'helvetica neue';
   }
   
-  h1 {
+ h1 {
     color:darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
   
   .box {
