--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     
     <form  class="item" action="/" method="post">
         <input type="text" name="task" placeholder="input your task here">
-        <button type="submit">Submit</button>
+        <button type="submit">+</button>
     </form>
     </div>
         
